--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
-    "web-vitals": "^1.0.1"
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "craco start",
